# nlp-detective-agency

./: .env.example  .gitignore  Dockerfile  LICENSE  OUTLINE.md  README.md  clint-requests.md  conftest.py  eslint.config.js  instructor.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
data/inkwell/: cold_cases.json  statement_entities.json  statements.json  tips.json  witness_sentiment.json
data/public/: conll_ner_sample.json  movie_reviews_sample.json  newsgroups_articles.json  newsgroups_sample.json  sms_spam_sample.json  support_tickets_sample.json  ud_ewt_sample.json
ex-module-01-working-with-the-llm/: README.md
ex-module-01-working-with-the-llm/demo/: demo.py
ex-module-01-working-with-the-llm/slides/: index.html  package.json
module-00-python-for-text/: README.md
module-00-python-for-text/demo/: 01_strings_and_regex.py  02_collections_and_io.py
module-00-python-for-text/slides/: index.html  package.json
module-00-python-fundamentals/: README.md
module-00-python-fundamentals/demo/: 01_data_structures.py  02_modules_cli.py  03_dataclasses_protocols.py  04_async_essentials.py  05_http_basics.py
module-00-python-fundamentals/slides/: index.html  package.json
module-01-text-preprocessing/: README.md
module-02-feature-extraction/: README.md
module-03-text-classification/: README.md
module-04-topic-modelling/: README.md
module-05-word-embeddings/: README.md
module-06-ner-and-pos/: README.md
module-07-transformers/: README.md
module-08-capstone/: README.md
slide-deck/: README.md  package.json
(+197 files in other folders)
