[project]
name = "nlp-python-course"
version = "1.0.0"
description = "Python NLP: Inkwell Investigations - 2-day course materials"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "mcp>=1.0",
    "pydantic>=2.9",
    "sse-starlette>=1.3",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-httpx>=0.34", "ruff>=0.8"]
rag = ["chromadb>=0.5", "sentence-transformers>=3.0", "networkx>=3.2"]
langchain = [
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain>=0.3,<1",
    "langchain-chroma>=0.2",
    "langgraph>=0.2,<1",
    "langserve[server]>=0.3",
]
structured = ["instructor>=1.4"]
audio = ["sounddevice>=0.4", "numpy>=1.26"]
local-ml = [
    "torch>=2.4,<2.8",
    "transformers>=4.44,<5",
    "datasets>=2.19,<3",
    "accelerate>=0.30,<1",
    "sentencepiece>=0.1.99",
]
nlp = [
    "nltk>=3.8",
    "scikit-learn>=1.5",
    "pyldavis>=3.4",
    "gensim>=4.3",
    "spacy>=3.7",
    "transformers>=4.44,<5",
    "datasets>=2.19,<3",
    "joblib>=1.4",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
